src/App.css
:root {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

#App {
  width: 100vw;
  display: flex;
  flex-direction: column;
}

.title {
  margin: 0 auto;
  width: 100vw;
  padding: 2rem 0;
  text-align: center;
  background-color: rgb(51, 51, 51);
}

.post {
  width: max(50vw, 1000px);
  margin: 0 auto;
  padding: 2rem;
  text-align: left;
}

